# cornered

./: README.md  book.epub  justfile  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_rust_bridge_template/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist  bridge_generated.h
lib/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  main.dart  smooth_scroll.dart  utils.dart
lib/common/: common_page.dart  future_handled_builder.dart  preferences.dart  theme.dart
lib/views/: library.dart  reader.dart  settings.dart  synchronize.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner/: bridge_generated.h
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/src/: api.rs  books.rs  books_generated.io.rs  books_generated.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  bridge_generated_1.io.rs  bridge_generated_1.rs  bridge_generated_2.io.rs  bridge_generated_2.rs  fonts.rs  helpers.rs  lib.rs  types.rs  util.rs  util_generated.io.rs  util_generated.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
