[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
base64 = "0.21.0"
bincode = "1.3.3"
epub = "2.0.0"
flutter_rust_bridge = "1.72.2"
once_cell = "1.17.1"
parking_lot = "0.12.1"
percent-encoding = "2.2.0"
rayon = "1.7.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
ureq = { version = "2.6.2", features = ["json"] }
uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }
