[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
base64 = "0.21.2"
bincode = "1.3.3"
epub = "2.0.0"
flutter_rust_bridge = "1.77.1"
once_cell = "1.18.0"
parking_lot = "0.12.1"
percent-encoding = "2.3.0"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.22.0", features = ["bundled"] }
rayon = "1.7.0"
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "1.0.40"
ureq = { version = "2.7.0", features = ["json"] }
uuid = { version = "1.4.0", features = ["v4", "fast-rng"] }
